[package]
name = "snarkos-node-consensus"
version = "3.8.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A node consensus for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2021"

[features]
default = [ ]
locktick = [
  "dep:locktick",
  "snarkos-node-bft/locktick",
  "snarkos-node-bft-ledger-service/locktick",
  "snarkos-node-bft-storage-service/locktick",
  "snarkvm/locktick"
]
metrics = [ "dep:metrics" ]
telemetry = [ "snarkos-node-bft/telemetry" ]
cuda = [ "snarkvm/cuda", "snarkos-account/cuda", "snarkos-node-bft-ledger-service/cuda" ]

[dependencies.aleo-std]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.colored]
version = "2"

[dependencies.indexmap]
workspace = true
features = [ "serde", "rayon" ]

[dependencies.locktick]
version = "0.3"
features = [ "parking_lot" ]
optional = true

[dependencies.lru]
version = "0.12.1"

[dependencies.metrics]
package = "snarkos-node-metrics"
path = "../metrics"
version = "=3.8.0"
optional = true

[dependencies.parking_lot]
version = "0.12"

[dependencies.snarkos-account]
path = "../../account"
version = "=3.8.0"

[dependencies.snarkos-node-bft]
path = "../bft"
version = "=3.8.0"

[dependencies.snarkos-node-bft-ledger-service]
path = "../bft/ledger-service"
version = "=3.8.0"
default-features = false
features = [ "ledger", "ledger-write" ]

[dependencies.snarkos-node-bft-storage-service]
path = "../bft/storage-service"
version = "=3.8.0"
default-features = false
features = [ "persistent" ]

[dependencies.snarkos-node-sync]
path = "../sync"
version = "=3.8.0"

[dependencies.snarkvm]
workspace = true

[dependencies.tokio]
workspace = true
features = [ "macros", "rt-multi-thread", "signal" ]

[dependencies.tracing]
version = "0.1"

[dev-dependencies.indexmap]
workspace = true

[dev-dependencies.itertools]
version = "0.12"

[dev-dependencies.once_cell]
version = "1.19"

[dev-dependencies.snarkvm]
 workspace = true
 features = [ "test-helpers" ]

[dev-dependencies.tracing-test]
version = "0.2"
