[package]
name = "snarkos-node-consensus"
version = "4.0.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A node consensus for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2024"

[features]
default = [ ]
locktick = [
  "dep:locktick",
  "snarkos-node-bft/locktick",
  "snarkos-node-bft-ledger-service/locktick",
  "snarkos-node-bft-storage-service/locktick",
  "snarkvm/locktick"
]
metrics = [ "dep:metrics" ]
telemetry = [ "snarkos-node-bft/telemetry" ]
cuda = [ "snarkvm/cuda", "snarkos-account/cuda", "snarkos-node-bft-ledger-service/cuda" ]
serial = [ "snarkos-node-bft-ledger-service/serial" ]


[dependencies.aleo-std]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.colored]
version = "2"

[dependencies.indexmap]
workspace = true
features = [ "serde", "rayon" ]

[dependencies.locktick]
version = "0.3"
features = [ "parking_lot" ]
optional = true

[dependencies.lru]
version = "0.12.1"

[dependencies.metrics]
package = "snarkos-node-metrics"
path = "../metrics"
version = "=4.0.1"
optional = true

[dependencies.parking_lot]
version = "0.12"

[dependencies.snarkos-account]
path = "../../account"
version = "=4.0.1"

[dependencies.snarkos-node-bft]
path = "../bft"
version = "=4.0.1"

[dependencies.snarkos-node-bft-ledger-service]
path = "../bft/ledger-service"
version = "=4.0.1"
default-features = false
features = [ "ledger", "ledger-write" ]

[dependencies.snarkos-node-bft-storage-service]
path = "../bft/storage-service"
version = "=4.0.1"
default-features = false
features = [ "persistent" ]

[dependencies.snarkos-node-sync]
path = "../sync"
version = "=4.0.1"

[dependencies.snarkvm]
workspace = true

[dependencies.tokio]
workspace = true
features = [ "macros", "rt-multi-thread", "signal" ]

[dependencies.tracing]
workspace = true

[dev-dependencies.indexmap]
workspace = true

[dev-dependencies.itertools]
version = "0.12"

[dev-dependencies.once_cell]
version = "1.19"

[dev-dependencies.snarkvm]
 workspace = true
 features = [ "test-helpers" ]

[dev-dependencies.tracing-test]
workspace = true
