[package]
name = "snarkos-node-consensus"
version = "4.0.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A node consensus for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2024"

[features]
default = [ ]
locktick = [
  "dep:locktick",
  "snarkos-node-bft/locktick",
  "snarkos-node-bft-ledger-service/locktick",
  "snarkos-node-bft-storage-service/locktick",
  "snarkvm/locktick"
]
metrics = [ "dep:snarkos-node-metrics" ]
telemetry = [ "snarkos-node-bft/telemetry" ]
cuda = [ "snarkvm/cuda", "snarkos-account/cuda", "snarkos-node-bft-ledger-service/cuda" ]
serial = [ "snarkos-node-bft-ledger-service/serial" ]


[dependencies.aleo-std]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.colored]
version = "2"

[dependencies.indexmap]
workspace = true
features = [ "serde", "rayon" ]

[dependencies.locktick]
workspace = true
features = [ "parking_lot" ]
optional = true

[dependencies.lru]
workspace = true

[dependencies.snarkos-node-metrics]
workspace = true
optional = true

[dependencies.parking_lot]
workspace = true

[dependencies.snarkos-account]
workspace = true

[dependencies.snarkos-node-bft]
workspace = true

[dependencies.snarkos-node-bft-ledger-service]
workspace = true
features = [ "ledger", "ledger-write" ]

[dependencies.snarkos-node-bft-storage-service]
workspace = true
features = [ "persistent" ]

[dependencies.snarkos-node-sync]
workspace = true

[dependencies.snarkvm]
workspace = true

[dependencies.tokio]
workspace = true
features = [ "macros", "rt-multi-thread", "signal" ]

[dependencies.tracing]
workspace = true

[dev-dependencies.indexmap]
workspace = true

[dev-dependencies.itertools]
workspace = true

[dev-dependencies.once_cell]
workspace = true

[dev-dependencies.snarkvm]
 workspace = true
 features = [ "test-helpers" ]

[dev-dependencies.tracing-test]
workspace = true
