[package]
name = "snarkos-node-rest"
version = "4.0.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A REST API server for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2024"

[features]
default = [ ]
history = [ "snarkvm/synthesizer", "snarkvm/history" ]
telemetry = [ "snarkos-node-consensus/telemetry" ]
cuda = [ "snarkvm/cuda", "snarkos-node-consensus/cuda", "snarkos-node-router/cuda" ]
locktick = [
  "dep:locktick",
  "snarkos-node-consensus/locktick",
  "snarkos-node-router/locktick",
  "snarkvm/locktick"
]
serial = [
  "snarkos-node-router/serial",
  "snarkos-node-consensus/serial"
] 

[dependencies.anyhow]
workspace = true

[dependencies.axum]
version = "0.8"

[dependencies.axum-extra]
version = "0.10"
features = [ "erased-json", "typed-header" ]

[dependencies.http]
version = "1.0"

[dependencies.indexmap]
workspace = true
features = [ "serde", "rayon" ]

[dependencies.jsonwebtoken]
version = "9.2"

[dependencies.locktick]
version = "0.3"
features = [ "parking_lot" ]
optional = true

[dependencies.once_cell]
version = "1.19"

[dependencies.parking_lot]
version = "0.12"

[dependencies.serde]
workspace = true 
features = [ "derive" ]

[dependencies.serde_json]
version = "1"
features = [ "preserve_order" ]

[dependencies.serde_with]
version = "3"

[dependencies.snarkos-node-cdn]
workspace = true

[dependencies.snarkos-node-consensus]
workspace = true

[dependencies.snarkos-node-router]
workspace = true

[dependencies.snarkos-node-sync]
workspace = true

[dependencies.snarkvm]
workspace = true

[dependencies.rand]
version = "0.8"

[dependencies.rayon]
version = "1"

[dependencies.time]
version = "0.3"

[dependencies.tokio]
workspace = true

[dependencies.tower_governor]
version = "0.7"

[dependencies.tower-http]
version = "0.6"
features = [ "cors", "trace" ]

[dependencies.tracing]
workspace = true

[dev-dependencies.base64]
workspace = true
