[package]
name = "snarkos-node-rest"
version = "4.0.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A REST API server for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2024"

[features]
default = [ ]
history = [ "snarkvm/synthesizer", "snarkvm/history" ]
telemetry = [ "snarkos-node-consensus/telemetry" ]
cuda = [ "snarkvm/cuda", "snarkos-node-consensus/cuda", "snarkos-node-router/cuda" ]
locktick = [
  "dep:locktick",
  "snarkos-node-consensus/locktick",
  "snarkos-node-router/locktick",
  "snarkvm/locktick"
]
serial = [
  "snarkos-node-router/serial",
  "snarkos-node-consensus/serial"
] 

[dependencies.anyhow]
workspace = true

[dependencies.axum]
workspace = true

[dependencies.axum-extra]
workspace = true
features = [ "erased-json", "typed-header" ]

[dependencies.http]
workspace = true

[dependencies.indexmap]
workspace = true
features = [ "serde", "rayon" ]

[dependencies.jsonwebtoken]
version = "9.2"

[dependencies.locktick]
workspace = true
features = [ "parking_lot" ]
optional = true

[dependencies.once_cell]
workspace = true

[dependencies.parking_lot]
workspace = true

[dependencies.serde]
workspace = true 
features = [ "derive" ]

[dependencies.serde_json]
workspace = true
features = [ "preserve_order" ]

[dependencies.serde_with]
version = "3"

[dependencies.snarkos-node-cdn]
workspace = true

[dependencies.snarkos-node-consensus]
workspace = true

[dependencies.snarkos-node-router]
workspace = true

[dependencies.snarkos-node-sync]
workspace = true

[dependencies.snarkvm]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.rayon]
workspace = true

[dependencies.time]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tower_governor]
version = "0.7"

[dependencies.tower-http]
version = "0.6"
features = [ "cors", "trace" ]

[dependencies.tracing]
workspace = true

[dev-dependencies.base64]
workspace = true

[build-dependencies.built]
workspace = true
