[package]
name = "snarkos-node-router"
version = "3.8.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A node router for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2021"

[features]
test = [ ]
locktick = [ "dep:locktick", "snarkos-node-tcp/locktick", "snarkvm/locktick" ]
metrics = [ "dep:metrics" ]
cuda = [ "snarkvm/cuda", "snarkos-account/cuda" ]

[dependencies.anyhow]
workspace = true

[dependencies.async-trait]
version = "0.1"

[dependencies.colored]
version = "2"

[dependencies.futures]
version = "0.3.30"
features = [ "thread-pool" ]

[dependencies.linked-hash-map]
version = "0.5"

[dependencies.locktick]
version = "0.3"
features = [ "parking_lot" ]
optional = true

[dependencies.metrics]
package = "snarkos-node-metrics"
path = "../metrics"
version = "=3.8.0"
optional = true

[dependencies.parking_lot]
version = "0.12"

[dependencies.rand]
version = "0.8"

[dependencies.rayon]
version = "1.10"

[dependencies.snarkos-account]
path = "../../account"
version = "=3.8.0"

[dependencies.snarkos-node-bft-ledger-service]
path = "../bft/ledger-service"
version = "=3.8.0"
default-features = false
features = [ "ledger", "prover" ]

[dependencies.snarkos-node-sync-locators]
path = "../sync/locators"
version = "=3.8.0"

[dependencies.snarkos-node-router-messages]
path = "messages"
version = "=3.8.0"

[dependencies.snarkos-node-tcp]
path = "../tcp"
version = "=3.8.0"

[dependencies.snarkvm]
workspace = true

[dependencies.time]
version = "0.3"

[dependencies.tokio]
workspace = true
features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time"
]

[dependencies.tokio-util]
version = "0.7"
features = [ "codec" ]

[dependencies.tokio-stream]
version = "=0.1"

[dependencies.tracing]
version = "0.1"

[dev-dependencies.deadline]
version = "0.2"

[dev-dependencies.futures-util]
version = "0.3"
features = [ "sink" ]

[dev-dependencies.peak_alloc]
version = "0.2"

[dev-dependencies.snarkos-node-bft-ledger-service]
path = "../bft/ledger-service"
features = [ "ledger-write", "test" ]

[dev-dependencies.snarkos-node-sync]
path = "../sync"
features = [ "test" ]

[dev-dependencies.snarkos-node-router]
path = "."
features = [ "test" ]

[dev-dependencies.snarkos-node-router-messages]
path = "messages"
features = [ "test" ]

[dev-dependencies.snarkvm]
workspace = true
features = [ "test-helpers" ]

[dev-dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter", "fmt" ]
