[package]
name = "snarkos-node-sync"
version = "4.0.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A synchronization module for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2024"

[features]
default = [ ]
locktick = [
  "dep:locktick",
  "snarkos-node-bft-ledger-service/locktick",
  "snarkos-node-router/locktick",
]
serial = ["snarkos-node-bft-ledger-service/serial"]

metrics = [ "dep:metrics" ]
cuda = [ "snarkvm/cuda", "snarkos-node-bft-ledger-service/cuda", "snarkos-node-router/cuda" ]
test = [ "snarkos-node-sync-locators/test" ]

[dependencies.anyhow]
workspace = true

[dependencies.indexmap]
workspace = true
features = [ "serde", "rayon" ]

[dependencies.itertools]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.locktick]
version = "0.3"
features = [ "parking_lot" ]
optional = true

[dependencies.parking_lot]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.tokio]
workspace = true
features = [ "sync" ]

[dependencies.rand]
version = "0.8"

[dependencies.snarkos-node-bft-ledger-service]
workspace = true
features = [ "ledger-write" ]

[dependencies.metrics]
package = "snarkos-node-metrics"
path = "../metrics"
version = "=4.0.1"
optional = true

[dependencies.snarkos-node-router]
workspace = true

[dependencies.snarkos-node-sync-communication-service]
workspace = true

[dependencies.snarkos-node-sync-locators]
workspace =true

[dependencies.snarkvm]
workspace = true

[dependencies.tracing]
workspace = true

[dev-dependencies.snarkos-node-bft-ledger-service]
path = "../bft/ledger-service"
features = [ "test" ]

[dev-dependencies.snarkos-node-sync-locators]
path = "locators"
features = [ "test" ]

[dev-dependencies.snarkos-node-sync-communication-service]
workspace = true
features = [ "test-helpers" ]

[dev-dependencies.snarkvm]
workspace = true
features = [ "test-helpers" ]

[dev-dependencies.tracing-subscriber]
workspace = true
features = [ "env-filter", "fmt" ]
