[package]
name = "snarkos-node-tcp"
version = "4.1.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A TCP stack for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2024"

[features]
default = [ ]
locktick = [ "dep:locktick" ]
metrics = [ "dep:metrics" ]

[dependencies]
async-trait = "0.1"
bytes = "1"
parking_lot = "0.12"

[dependencies.futures-util]
version = "0.3"
features = [ "sink" ]

[dependencies.locktick]
version = "0.3"
features = [ "parking_lot" ]
optional = true

[dependencies.metrics]
package = "snarkos-node-metrics"
path = "../metrics"
version = "=4.1.0"
optional = true

[dependencies.once_cell]
version = "1"
features = [ "parking_lot" ]

[dependencies.tokio]
workspace = true
features = [ "io-util", "net", "parking_lot", "rt", "sync", "time" ]

[dependencies.tokio-util]
workspace = true
features = [ "codec" ]

[dependencies.tracing]
workspace = true

[dependencies.thiserror]
version = "2"

[dev-dependencies.tokio]
workspace = true
features = [ "macros" ]
