[package]
name = "snarkos-node-bft-events"
version = "3.7.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Events for the gateway in a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2021"

[features]
default = [ ]
metrics = [ "snarkvm/metrics" ]

[dependencies.anyhow]
version = "1.0"

[dependencies.bytes]
version = "1"

[dependencies.indexmap]
version = "2.1"
features = [ "serde", "rayon" ]

[dependencies.serde]
version = "1"

[dependencies.snarkos-node-sync-locators]
path = "../../sync/locators"
version = "=3.7.1"

[dependencies.snarkvm]
workspace = true

[dependencies.tokio-util]
version = "0.7"
features = [ "codec" ]

[dependencies.tracing]
version = "0.1"

[dev-dependencies.proptest]
workspace = true

[dev-dependencies.snarkvm]
workspace = true
features = [ "test-helpers" ]

[dev-dependencies.test-strategy]
version = "0.3.1"

[dev-dependencies.time]
version = "0.3"

[dev-dependencies.snarkos-node-sync-locators]
path = "../../sync/locators"
features = [ "test" ]
