[package]
name = "snarkos-node-bft-ledger-service"
version = "4.0.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A ledger service for the memory pool in a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2021"

[features]
default = [ ]
ledger = [ "parking_lot", "rand", "rayon", "tokio", "tracing" ]
ledger-write = [ ]
locktick = [ "dep:locktick", "snarkvm/locktick" ]
metrics = [ "dep:metrics", "snarkvm/metrics" ]
mock = [ "parking_lot", "tracing" ]
prover = [ ]
cuda = [ "snarkvm/cuda" ]
test = [ "mock", "translucent" ]
translucent = [ "ledger" ]

[dependencies.anyhow]
workspace = true

[dependencies.async-trait]
version = "0.1"

[dependencies.indexmap]
workspace = true
features = [ "serde", "rayon" ]

[dependencies.locktick]
version = "0.3"
features = [ "parking_lot" ]
optional = true

[dependencies.metrics]
package = "snarkos-node-metrics"
path = "../../metrics"
version = "=4.0.1"
optional = true

[dependencies.parking_lot]
version = "0.12"
optional = true

[dependencies.rand]
version = "0.8"
optional = true

[dependencies.rayon]
version = "1"
optional = true

[dependencies.snarkvm]
workspace = true
features = [ "console", "ledger", "synthesizer" ]

[dependencies.tokio]
workspace = true
features = [ "macros", "rt-multi-thread" ]
optional = true

[dependencies.tracing]
workspace = true
optional = true
