[package]
name = "snarkos-node-bft-ledger-service"
version = "4.1.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A ledger service for the memory pool in a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2024"

[features]
default = [ ]
ledger = [ "parking_lot", "rand", "rayon", "tokio", "tracing" ]
ledger-write = [ ]
locktick = [ "dep:locktick", "snarkvm/locktick" ]
metrics = [ "dep:snarkos-node-metrics", "snarkvm/metrics" ]
mock = [ "parking_lot", "tracing" ]
prover = [ ]
cuda = [ "snarkvm/cuda" ]
serial = [ ]
test = [ "mock", "translucent" ]
translucent = [ "ledger" ]

[dependencies.anyhow]
workspace = true

[dependencies.async-trait]
version = "0.1"

[dependencies.indexmap]
workspace = true
features = [ "serde", "rayon" ]

[dependencies.locktick]
workspace = true
features = [ "parking_lot" ]
optional = true

[dependencies.snarkos-node-metrics]
workspace = true
optional = true

[dependencies.parking_lot]
workspace = true
optional = true

[dependencies.rand]
workspace = true
optional = true

[dependencies.rayon]
workspace = true
optional = true

[dependencies.snarkvm]
workspace = true
features = [ "console", "ledger", "synthesizer" ]

[dependencies.tokio]
workspace = true
features = [ "macros", "rt-multi-thread" ]
optional = true

[dependencies.tracing]
workspace = true
optional = true
