[package]
name = "snarkos-node-bft-storage-service"
version = "3.5.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A storage service for the memory pool in a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2021"

[features]
default = [ ]
locktick = [ "dep:locktick", "snarkvm/locktick" ]
memory = [ "parking_lot", "tracing" ]
persistent = [ ]
test = [ "memory" ]
test_network = [ "snarkvm/test_targets", "snarkvm/test_consensus_versions" ]

[dependencies.aleo-std]
workspace = true

[dependencies.anyhow]
version = "1.0.79"

[dependencies.indexmap]
version = "2.1"
features = [ "serde", "rayon" ]

[dependencies.locktick]
version = "0.3"
features = [ "parking_lot" ]
optional = true

[dependencies.lru]
version = "0.12.1"

[dependencies.parking_lot]
version = "0.12"
optional = true

[dependencies.snarkvm]
workspace = true

[dependencies.tracing]
version = "0.1"
optional = true

[dev-dependencies.snarkvm]
workspace = true
features = [ "test" ]
