[package]
name = "snarkos-node-bft-storage-service"
version = "4.1.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A storage service for the memory pool in a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2024"

[features]
default = [ ]
locktick = [ "dep:locktick", "snarkvm/locktick" ]
memory = [ "parking_lot", "tracing" ]
persistent = [ ]
test = [ "memory" ]

[dependencies.aleo-std]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.indexmap]
workspace = true
features = [ "serde", "rayon" ]

[dependencies.locktick]
workspace = true
features = [ "parking_lot" ]
optional = true

[dependencies.lru]
workspace = true

[dependencies.parking_lot]
workspace = true
optional = true

[dependencies.snarkvm]
workspace = true
features = [ "ledger", "console", "rocks" ]

[dependencies.tracing]
workspace = true
optional = true

[dev-dependencies.snarkvm]
workspace = true
features = [ "test" ]
